Safari on iOS navigation fixed

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,12 +1,21 @@
 ﻿@font-face {
-    font-family: Gilroy;
-    src: url("../fonts/Gilroy.otf") format("opentype");
+    font-family: 'Gilroy';
+    src: url('../fonts/Gilroy.eot'); /* IE9+ Compat Modes */
+    src: url('../fonts/Gilroy.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('../fonts/Gilroy.woff2') format('woff2'), /* Super modern browsers */
+    url('../fonts/Gilroy.woff') format('woff'), /* Modern browsers */
+    url('../fonts/Gilroy.ttf') format('truetype'), /* Safari, Android, iOS */
+    url('../fonts/Gilroy.svg#FontName') format('svg'); /* Legacy iOS */
 }
 
 @font-face {
-    font-family: GilroyBold;
-    font-weight: bold;
-    src: url("../fonts/GilroyBold.otf") format("opentype");
+    font-family: 'GilroyBold';
+    src: url('../fonts/GilroyBold.eot'); /* IE9+ Compat Modes */
+    src: url('../fonts/GilroyBold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('../fonts/GilroyBold.woff2') format('woff2'), /* Super modern browsers */
+    url('../fonts/GilroyBold.woff') format('woff'), /* Modern browsers */
+    url('../fonts/GilroyBold.ttf') format('truetype'), /* Safari, Android, iOS */
+    url('../fonts/GilroyBold.svg#FontName') format('svg'); /* Legacy iOS */
 }
 
 $break-small: 420px;
@@ -198,9 +207,7 @@ button.md-button.md-fab.md-theme-purple, a.md-button.md-fab.md-primary.md-mini.m
         }
 
         i {
-            background: -webkit-linear-gradient(left top,#517bfc,#645ffd);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
+            color: #517bfc !important;
         }
 
         span {
